--- a/Enclosed_Charge/Enclosed_Charge.tex
+++ b/Enclosed_Charge/Enclosed_Charge.tex
@@ -149,25 +149,29 @@ A non--conducting hollow cylinder of radius $R$ and length $H$ has a charge of $
 
   \item Find an equation for $Q_{\text{encl}}$ for $r>R$. Your equation should involve $\lambda$ and one or more of $h$, $r$, and $R$.
 
-        \textbf{Answer}: The amount of charge enclosed is the charge per unit length $\times h = \lambda h$, so  $Q_{\text{encl}}=\lambda h$. (The amount of charge enclosed does not depend on $r$.)
-
-        \ifsolutions\else
-        \vskip 36.135pt
-        \fi
-
-  \item Find the amount of charge enclosed by the Gaussian cylinder when it has radii of $r=0$, $r=R/2$, $r=2R$, and $r=3R$.
-
         \ifsolutions
-          \textbf{Answer}: $0, 0, \lambda h, \lambda h$
+          \textbf{Answer}: The amount of charge enclosed is the charge per unit length $\times h = \lambda h$, so  $Q_{\text{encl}}=\lambda h$. (The amount of charge enclosed does not depend on $r$.)
         \else
           \vskip 36.135pt
         \fi
 
-  \item Plot the four values of enclosed charge calculated above versus the radius of the Gaussian cylinder. Then plot the equations found in parts 2. and 3 as a smooth line.
+\end{enumerate}
 
-        \ifsolutions
-          \input{figures/Hollow_Cylinder_Graph.tikz}
-        \fi
+\begin{enumerate}
+
+  \item[4.] Find the amount of charge enclosed by the Gaussian cylinder when it has radii of $r=0$, $r=R/2$, $r=2R$, and $r=3R$.
+
+            \ifsolutions
+              \textbf{Answer}: $0, 0, \lambda h, \lambda h$
+            \else
+              \vskip 36.135pt
+            \fi
+
+  \item[5.] Plot the four values of enclosed charge calculated above versus the radius of the Gaussian cylinder. Then plot the equations found in parts 2. and 3 as a smooth line.
+
+            \ifsolutions
+              \input{figures/Hollow_Cylinder_Graph.tikz}
+            \fi
 
 \end{enumerate}
 
