--- a/Capacitance/Capacitance.tex
+++ b/Capacitance/Capacitance.tex
@@ -109,7 +109,7 @@ The general technique for computing capacitance when Gauss's law applies is:
 
 \textbf{Electric Potential Energy and Electric Potential}
 
-The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force due to a static electric field, we define a potential energy $U$ according to
+The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force due to a static electric field, we define potential energy $U$ according to
 
 $\Delta U = U(b)-U(a) \equiv -W_{a\rightarrow b}$
 
@@ -123,9 +123,9 @@ In summary, if you calculate the difference in potential between $a$ and $b$ (in
 
 \begin{enumerate}
 
-  \item how much work (in Joules) the electric field did on the charge: $-q_o[V(b)-V(a)]$, and
+  \item how much work (in Joules) the electric field did on the charge: $-q_o(V(b)-V(a))$, and
 
-  \item the change in the charge's electric potential energy (in Joules): $+q_o[V(b)-V(a)]$.
+  \item the change in the charge's electric potential energy (in Joules): $+q_o(V(b)-V(a))$.
 
 \end{enumerate}
 
@@ -135,16 +135,16 @@ In summary, if you calculate the difference in potential between $a$ and $b$ (in
 
 \section{Parallel Plates}
 
-An equal and opposite amount of charge is placed on two conducting and parallel plates as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown such that the width, $w$, is much larger than the separation distance, $d$.
+An equal and opposite amount of charge is placed on two conducting and parallel plates, as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown, such that the width, $w$, is much larger than the separation distance, $d$.
 
 \input{figures/Parallel_Plate.tikz}
 
 \begin{enumerate}
 
-  \item How will the charges distribute on each of the plates? That is, how much charge is on each of the four faces that have area $A$? Assume that no charge appears on the other (narrow, and having thickness $t$) faces of the plates, which have a much smaller area.
+  \item How will the charges distribute on each of the plates? That is, how much charge is on each of the four faces that have an area $A$? Assume that no charge appears on the other (thin, and having thickness $t$) faces of the plates, which have a much smaller area.
 
      \ifsolutions
-       {\bf Answer}: The charges will move to the inner faces as shown in the following diagram. Electric field vectors for the positive an negative charges are shown. Because the charges are on a large plane, the field is indpendent of distance from the plane. With this charge configuration, inside the conductors, the field due to the positive charges cancels the field due to the negative charges giving a net field of zero.
+       {\bf Answer}: The charges will move to the inner faces, as shown in the following diagram. Electric field vectors for the positive and negative charges are shown. Because the charges are on a large plane, the field is independent of distance from the plane. With this charge configuration, inside the conductors, the field due to the positive charges cancels the field due to the negative charges giving a net field of zero.
 
        \input{figures/Parallel_Plate_Fields.tikz}
      \else
@@ -157,7 +157,7 @@ An equal and opposite amount of charge is placed on two conducting and parallel 
   \item What is the electric field in each of the five regions? (Hint: The magnitude of the field due to charges uniformly distributed on a plane is $|\sigma|/2\epsilon_o$. The field in each region will be the sum of the field due to charges on each plate. Your answer should be such that the electric field inside the conducting plates is zero!)
 
      \ifsolutions
-       {\bf Answer}: The magnitude of the field due to each plate is $|\sigma|/2\epsilon_o$, where $\sigma$ is the surface charge density. The surface charge densities are $\pm Q/A$.  
+       {\bf Answer}: The magnitude of the field due to each charged surface is $|\sigma|/2\epsilon_o$, where $\sigma$ is the surface charge density. The surface charge densities are $\pm Q/A$.  
 
        \input{figures/Parallel_Plate_Solution.tikz}
 
@@ -186,7 +186,7 @@ An equal and opposite amount of charge is placed on two conducting and parallel 
 
        $\ds V(d)-V(0) = -\int_0^d\bfvec{E}\bfcdot d\bfvec{l}$
 
-       The electric field is constant and in the same direction as $x$, so we know the result of the integration will be $\pm Ed=\pm Qd/A\epsilon_o$. Based on techniques covered in the last activity, we expect the potential to be higher at the right plate, so we choose the $+$ option. More formally,
+       The electric field is constant, and in the same direction as $x$, so we know the result of the integration will be $\pm Ed=\pm Qd/A\epsilon_o$. Based on techniques covered in the last activity, we expect the potential to be higher at the right plate, so we choose the $+$ option. More formally,
 
        Using $d\mathbf{l}=dx\ihat$  and $\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$ gives
 
@@ -234,7 +234,7 @@ Charge placed on two spherical conducting shells, the cross--section of which is
 
 \input{figures/Spherical.tikz}
 
-Using Gauss's law and the fact that the electric field inside a conductor must be zero, show that
+Using Gauss's law and the fact that the electric field inside a conductor must be zero show that
 
 \begin{enumerate}
 
@@ -246,13 +246,10 @@ Using Gauss's law and the fact that the electric field inside a conductor must b
 
 \end{enumerate}
 
-Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.
-
-\ifsolutions\else
-\newpage
+\ifsolutions
+  \textbf{Answer}: Covered in class.
 \fi
-
-\input{figures/Spherical.tikz}
+Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.
 
 \begin{enumerate}
 
@@ -294,7 +291,7 @@ Draw the Gaussian surfaces that you use to answer this question on the diagram a
   \item[7.] (Review question) How much work would the electric field do on a charge $q_o$ that is moved from $r=a$ to $r=b$? What would be the change in $q_o$'s electric potential energy?
 
      \ifsolutions
-       \textbf{Answer}: $-q_o(V(b)-V(a))$ and $q_o(V(b)-V(a))$. Check: Work is negative b/c electric field direction is opposite the direction of movement. PE increases.
+       \textbf{Answer}: $-q_o(V(b)-V(a))$ and $q_o(V(b)-V(a))$. Check: Work is negative b/c the electric field direction is opposite the direction of movement. PE increases.
      \fi
 
 \end{enumerate}
