--- a/Capacitance/Capacitance.tex
+++ b/Capacitance/Capacitance.tex
@@ -244,12 +244,17 @@ Using Gauss's law and the fact that the electric field inside a conductor must b
 
   \item there is no charge on the outer surface of the outer conductor.
 
+     \ifsolutions
+       \textbf{Answer}: Covered in class.
+     \fi
+
 \end{enumerate}
 
-\ifsolutions
-  \textbf{Answer}: Covered in class.
-\fi
 Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.
+
+\ifsolutions\else
+\newpage
+\fi
 
 \begin{enumerate}
 
