--- a/Electric_Force/Electric_Force.tex
+++ b/Electric_Force/Electric_Force.tex
@@ -77,37 +77,24 @@
 
 \begin{document}
 
-\section{Overview}
+% Figures:
+% https://www.mathcha.io/editor/5wDQpF09tVvhYnVkOMFvlJp3hDwwMQ0sDKkZme
 
-We generally describe vector equations in two ways:
+This activity covers topics in Section 21.3 of Young and Freedman 2015, 14th Edition. If you need to review vectors, see sections 1.6-1.8 of Young and Freedman 2015, 14th Edition and  Vectors at Khan Academy.
 
-\begin{enumerate}
-
-  \item Simple -- An equation for the magnitude is given, and words are used to describe the direction.
-
-  \item Compact -- A single equation is given for the vector, and additional equations are given for parts of the equation.
-
-\end{enumerate}
-
-For example, in Section 21.3 of the textbook, the equation for Coulomb's Law was given in the simple form. In Section 21.4, the equation for the electric field due to a point charge was given in the compact form.
-
-In PHYS 260, you will need to be able to solve problems similar to the examples given here quickly. If you found the problems in this activity to be difficult, review Sections 1.7-1.8 in the textbook and see Khan Academy's comprehensive introduction to vectors.
-
-\section{Coulomb's Law in Simple Form}
+\section{Coulomb's Law}
 
 \emph{Magnitude}
 
 \begin{equation}
-F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}
+F_{1\mbox{ on } 2}=F_{2\mbox{ on } 1}=k\frac{|q_1q_2|}{r^2}
 \end{equation}
 
-where $r$ is the distance between $q_1$ and $q_2$. To simplify notation, we are using $k$ in place of $1/4\pi\epsilon_o$.
+where $r$ is the distance between $q_1$ and $q_2$. To simplify notation, we are using $k$ in place of $1/4\pi\epsilon_o$. Note that by definition, the magnitude of a vector is positive, which is the reason for the use of the absolute value.
 
-\emph{Direction}
+\emph{Direction}: Along line that connects $q_1$ and $q_2$. Direction depends on signs of $q_1$ and $q_2$. (Likes repel, opposites attract.).
 
-Along line that connects $q_1$ and $q_2$. Direction depends on signs of $q_1$ and $q_2$. (Likes repel, opposites attract.).
-
-\subsection{Example}
+\section{Example}
 
 Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges have a charge of $q$.
 
@@ -117,39 +104,66 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges
 
   \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
+  \item If the charges have opposite signs, how will your answers to 1. and 2. change?
+
 \end{enumerate}
 
-\ifsolutions
 \textbf{Solution}
+
+\begin{enumerate}
+
+  \item The distance between the charges is $r=\sqrt{(2a)^2+(2a)^2}=2\sqrt{2}a$, so
+
+    \begin{equation}
+    F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(2\sqrt{2}a)^2}=\frac{kq^2}{8a^2}
+    \end{equation}
+
+        The charges will repel each other, so the direction of forces of one on the other will be as shown in the left part of the following diagram.
+
+        \input{figures/Two_Charges-a.tikz}
+
+  \item Let $F = F_{1\mbox{ on } 2}$ from part 1. to simplify notation. The right part of the above diagram shows the calculation of the components $F_x$ and $F_y$, from which it follows that $\bfvec{F} = F\cos 45^\circ \ihat + F\sin 45^\circ \jhat$. Note that reversing the direction of a vector is the same as multiplying each of its components by $-1$.
+
+  \item The magnitude will not change (it is by definition a positive number). The force vectors will reverse direction as shown on the left in the following diagram. The diagram on the right shows the calculation of $\bfvec{F}_{1\mbox{ on } 2}$, from which it follows that $\bfvec{F}_{1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$.
+
+        \input{figures/Two_Charges-b.tikz}
+
+\end{enumerate}
+
+\section{Problem I}
+
+Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, -a)$. Both charges have a charge of $q$. Draw this charge configuration and then using the steps in the previous example,
+
+\begin{enumerate}
+
+  \item Find the magnitude and direction of the force of $q_1$ on $q_2$.
+
+  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
+
+  \item If the charges have opposite signs, how will your answers to 1. and 2. change?
+
+\end{enumerate}
+
+\input{figures/grid.tikz}
+
+\ifsolutions
 
     \begin{enumerate}
 
-      \item The distance between the charges is $r=2\sqrt{2}a$, so
+      \item $\ds F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(2\sqrt{2}a)^2}=\frac{kq^2}{8a^2}$
 
-        \begin{equation}
-        F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(2\sqrt{2}a)^2}=\frac{kq^2}{8a^2}
-        \end{equation}
+      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 45^\circ \ihat - \sin 45^\circ \jhat)$
 
-            The charges will repel each other, so the direction of forces of one on the other will be as shown in the diagram. The direction of the force vector on $q_2$ is shown in the diagram.
-
-            \input{figures/Two_Charges.tikz}
-
-      \item Let $F = F_{1\mbox{ on } 2}$ from part 1. to simplify notation. Then
-
-            $\bfvec{F} = F\cos 45^\circ \ihat + F\sin 45^\circ \jhat$. Given that $\cos 45^\circ=\sin 45^\circ = \frac{1}{\sqrt{2}}$, we can also write
-
-        \begin{equation}
-        \bfvec{F} = F\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]
-        \end{equation}
+      \item 1.: No change; 2. $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\cos 45^\circ \ihat + \sin 45^\circ \jhat)$
 
     \end{enumerate}
 \fi
 
-\subsection{Problem}
+\newpage
 
-Charge $q_1$ is at $(x,y)=(a,a)$ and charge $q_2$ is at $(-a, -a)$. Both charges have a charge of $q$. Draw this charge configuration and then using the steps in the previous example,
+\section{Problem II}
 
-\input{figures/grid-w100pct-w20pps-h200px-h20pps.tikz}
+Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Charge $q_1$ has a charge of $+q$. Charge $q_2$ has a charge of $+q$, where $q$ is a positive number. Draw this charge configuration and then using the steps in the previous example,
 
 \begin{enumerate}
 
@@ -157,92 +171,41 @@ Charge $q_1$ is at $(x,y)=(a,a)$ and charge $q_2$ is at $(-a, -a)$. Both charges
 
   \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
-\end{enumerate}
-
-\section{Coulomb's Law in Compact Form}
-
-\begin{equation}
-\bfvec{F}_{1\mbox{ on } 2}=kq_1q_2\frac{\rhat}{r^2}
-\end{equation}
-
-$\bfvec{r}=\bfvec{r}_2-\bfvec{r}_1$ is the vector from the position of $q_1$ to the position of $q_2$, $\bfvec{r}_1$ is a vector from the origin to the location of $q_1$, and $\bfvec{r}_2$ is a vector from the origin to the location of $q_2$.
-
-$r=|\bfvec{r}|=|\bfvec{r}_2-\bfvec{r}_1|$ is the distance from $q_1$ to $q_2$.
-
-$\displaystyle\rhat=\frac{\bfvec{r}}{r}$ is the unit vector pointing from the position of $q_1$ to the position of $q_2$.
-
-Although this form looks more complex, it requires basic steps to use.
-
-\subsection{Example}
-
-Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges have a charge of $q$.
-
-\begin{enumerate}
-
-  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
-
-  \item Find the magnitude and direction of the force of $q_1$ on $q_2$.
+  \item If the charges have opposite signs, how will your answers to 1. and 2. change?
 
 \end{enumerate}
+
+\input{figures/grid.tikz}
 
 \ifsolutions
-\textbf{Solution}
+
+\input{figures/Two_Charges-c.tikz}
 
     \begin{enumerate}
 
-      \item The vector from the origin to the location of $q_1$ is $\bfvec{r}_1=-a\ihat -a\jhat$
+      \item $\ds F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{\sqrt{(2a)^2+a^2}}=\frac{kq^2}{\sqrt{5}a^2}$
 
-            The vector from the origin to the location of $q_2$ is $\bfvec{r}_2=a\ihat + a\jhat$
+      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\sin \theta^\circ \ihat - \cos \theta\jhat)$; $\theta=63.4^\circ$.
 
-            The distance vector is $\bfvec{r}=\bfvec{r}_2-\bfvec{r}_1=2a\ihat+2a\jhat$
-
-            The length of the distance vector is
-
-            $r=|\bfvec{r}_2-\bfvec{r}_1|=\sqrt{(2a)^2 + (2a)^2} = 2\sqrt{2}a$
-
-            The unit vector pointing from the position of $q_1$ to the position of $q_2$ is
-
-        \begin{equation}
-        \rhat=\frac{\bfvec{r}}{r}=\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat
-        \end{equation}
-
-            Inserting the above results into the equation
-
-            $\displaystyle \bfvec{F}_{1\mbox{ on } 2}=kq_1q_2\frac{\rhat}{r^2}\quad$ gives
-
-        \begin{equation}
-        \bfvec{F}_{1\mbox{ on } 2}=
-         kq^2\frac{\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]}{(2\sqrt{2}a)^2}
-         \quad\text{ or }\quad
-         \bfvec{F}_{1\mbox{ on } 2}=
-         \frac{kq^2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]
-         \end{equation}
-
-            (Note that one can avoid the need to compute $\rhat$ by using the equivalent formula $\displaystyle \bfvec{F}_{1\mbox{ on } 2}=kq_1q_2{\bfvec{r}}/{r^3}$.)
-
-      \item Let $\bfvec{F} = \bfvec{F}_{1\mbox{ on } 2}$ from part 1. to simplify notation. Then
-
-        \begin{equation}
-        F=|\bfvec{F}|=\frac{kq^2}{8a^2}\sqrt{\left(\frac{1}{\sqrt{2}}\right)^2 + \left(\frac{1}{\sqrt{2}}\right)^2}=\frac{kq^2}{8a^2}
-        \end{equation}
-
-            The angle is $\displaystyle \theta = \tan^{-1}\left(\frac{F_y}{F_x}\right) = \tan^{-1}\bigg( \frac{\frac{F}{\sqrt{2}}}{\frac{F}{\sqrt{2}}}\bigg)=45^\circ$
-
-            See the margin note on page 16 of the textbook for an issue that may arise when using this formula to compute an angle.
+      \item 1.: No change; 2. $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\sin \theta^\circ \ihat + \cos \theta\jhat)$; $\theta=63.4^\circ$
 
     \end{enumerate}
 \fi
 
-\subsection{Problem}
+\section{Problem III}
 
-Charge $q_1$ is at $(x,y)=(a,a)$ and charge $q_2$ is at $(-2a, -2a)$. Both charges have a charge of $q$. Using the steps in the previous example,
+Charge $q_1$ is at $(x,y)=(-a,0)$ and charge $q_2$ is at $(0, 3a)$. Charge $q_1$ has a charge of $-q$. Charge $q_2$ has a charge of $+q$, where $q$ is a positive number. Draw this charge configuration and then using the steps in the previous example,
 
 \begin{enumerate}
 
-  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
-
   \item Find the magnitude and direction of the force of $q_1$ on $q_2$.
 
+  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
+
+  \item If the charges have opposite signs, how will your answers to 1. and 2. change?
+
 \end{enumerate}
+
+\input{figures/grid.tikz}
 
 \end{document}
